--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/gestionPlantillas/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/gestionPlantillas/index.xhtml
@@ -40,9 +40,9 @@
                     <p:column headerText="Estado " filterBy="#{car.plEstado}" filterMatchMode="contains">
                         #{car.estado}
                     </p:column>
-                    <p:column headerText="Elementos" filterBy="#{car.elemPlantilla}" filterMatchMode="contains">
+<!--                    <p:column headerText="Elementos" filterBy="#{car.elemPlantilla}" filterMatchMode="contains">
                         #{car.elemPlantilla}
-                    </p:column>
+                    </p:column>-->
                     <p:column headerText="Materia" filterBy="#{car.plNombre}" filterMatchMode="contains">
                         #{car.idMateria.maNombre}
                     </p:column>
