--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionMaterias/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionMaterias/crear.xhtml
@@ -27,7 +27,7 @@
                     <p:outputLabel  value="Nombre: " class=" Responsive"></p:outputLabel>
                     <p:inputText class=" Responsive" value="#{gestionMateriasController.materiaNuevo.maNombre}"></p:inputText>
                     <p:outputLabel  value="Grado: " class=" Responsive"></p:outputLabel>
-                    <p:selectOneMenu class=" Responsive" value="#{gestionMateriasController.materiaNuevo.idGrado}">
+                    <p:selectOneMenu class=" Responsive" value="#{gestionMateriasController.materiaNuevo.idGrado}" converter="grado">
                         <f:selectItems itemValue="#{gestionMateriasController.materiaNuevo.idGrado}" itemLabel="#{grado.grNombre}" value="#{gestionMateriasController.gradoList}" var="grado"></f:selectItems>
                     </p:selectOneMenu>
                 </p:panelGrid>
@@ -51,7 +51,7 @@
                 </p:panelGrid>
                 <div class="EmptyBox20"></div>
                 <div class="Container100 Responsive">
-                    <p:commandButton value="Guardar"/>
+                    <p:commandButton value="Guardar" action="#{gestionMateriasController.guardar()}"/>
                     <p:commandButton value="Limpiar"/>
                     <p:commandButton value="Cancelar"/>
                     <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
