--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionMaterias/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionMaterias/index.xhtml
@@ -42,9 +42,9 @@
                     <p:column headerText="Estado" filterBy="#{car.maEstado}" filterable="true" filterMatchMode="contains">
                         #{car.maEstado}
                     </p:column>
-                    <p:column headerText="Coordinador" filterBy="#{car.maCoordinador}" filterable="true" filterMatchMode="contains">
+<!--                    <p:column headerText="Coordinador" filterBy="#{car.maCoordinador}" filterable="true" filterMatchMode="contains">
                         #{car.maCoordinador}
-                    </p:column>
+                    </p:column>-->
                     <p:column headerText="Turno" filterBy="#{car.maTurno}" filterable="true" filterMatchMode="contains">
                         #{car.maTurno}
                     </p:column>
