--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/programacionClase/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/programacionClase/index.xhtml
@@ -23,7 +23,7 @@
             <p:dialog widgetVar="dlgEliminar" header="Eliminar" modal="true">
                 <p:outputLabel value="¿Está seguro de eliminar el registro?" class="TexAlCenter" ></p:outputLabel>
                 <div class="EmptyBox20"></div>
-                <p:commandButton value="Si" action="#{programacionClasesController.eliminarExpediente()}" update="consulta" oncomplete="PF('dlgEliminar').hide()"></p:commandButton>
+                <p:commandButton value="Si" action="#{programacionClasesController.eliminarArchivo()}" update="consulta" oncomplete="PF('dlgEliminar').hide()"></p:commandButton>
                 <p:commandButton value="No" onclick="PF('dlgEliminar').hide();" ></p:commandButton>
             </p:dialog>
             <p:remoteCommand name="updateTablaConsulta" update="consulta"></p:remoteCommand>
