--- a/SIENI/SIENI-web/src/main/webapp/resources/css/style.css
+++ b/SIENI/SIENI-web/src/main/webapp/resources/css/style.css
@@ -1,1 +1,34 @@
 .h2 { font-size: 1.5em; }
+
+
+.burbuja {
+    width: 8px;
+    height: 15px;
+    text-align: center;
+    background: none repeat scroll 0 0 #E02424;
+    border-radius: 3px 3px 3px 3px;
+    color: #FFFFFF;
+    font: bold 12px Arial,Helvetica;
+    padding: 1px 3px;
+    position: relative;
+    right: 2px;
+    top: -2px;
+
+    /* estas propiedades harán la animación */
+    -webkit-transition: all 0.5s ease-out;
+       -moz-transition: all 0.5s ease-out;
+        -ms-transition: all 0.5s ease-out;
+         -o-transition: all 0.5s ease-out;
+            transition: all 0.5s ease-out;
+}
+
+
+
+.burbuja.agrandar {
+    width: 15px;
+    height: 20px;
+    padding-top: 5px;
+}
+
+
+
