--- a/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpUsuarios.jrxml
+++ b/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpUsuarios.jrxml
@@ -6,6 +6,7 @@
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="fechaGeneracion" class="java.lang.String"/>
+	<parameter name="tipoUsuario" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -17,46 +18,47 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="67" splitType="Stretch">
-			<staticText>
-				<reportElement uuid="6380fbb6-acf1-4bc4-9e77-3c16f32331f2" x="180" y="1" width="205" height="19"/>
-				<textElement textAlignment="Center">
-					<font isBold="true"/>
-				</textElement>
-				<text><![CDATA[Centro Escolar San Ramón]]></text>
-			</staticText>
-			<staticText>
-				<reportElement uuid="b79a3114-94b7-4203-9a10-9c1efd94e65e" x="180" y="20" width="205" height="19"/>
-				<textElement textAlignment="Center">
-					<font isBold="true"/>
-				</textElement>
-				<text><![CDATA[Reporte de Usuarios]]></text>
-			</staticText>
-			<staticText>
-				<reportElement uuid="46e126d4-11a7-42e2-ba51-3128b20da3e3" x="390" y="47" width="104" height="20"/>
-				<textElement/>
-				<text><![CDATA[Fecha de generación:]]></text>
-			</staticText>
+		<band height="78" splitType="Stretch">
 			<image>
 				<reportElement uuid="efe7bbf6-afb3-4970-a868-fac4475e6689" x="22" y="-1" width="105" height="46"/>
 				<imageExpression><![CDATA["../images/mined.jpg"]]></imageExpression>
 			</image>
+			<staticText>
+				<reportElement uuid="cb2d6042-f989-42c2-ab39-7e624bbe6c10" x="185" y="0" width="205" height="29"/>
+				<textElement textAlignment="Center">
+					<font size="11" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Centro Escolar San Ramón
+Reporte de Usuario]]></text>
+			</staticText>
 			<textField>
-				<reportElement uuid="1a14dd55-a434-428d-a5b8-aee178745964" x="494" y="47" width="80" height="19"/>
-				<textElement/>
-				<textFieldExpression><![CDATA[$P{fechaGeneracion}]]></textFieldExpression>
+				<reportElement uuid="4267cde1-db7d-4399-8a03-21a638f6a319" x="397" y="0" width="164" height="30"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA["Pág "+$V{PAGE_NUMBER}+" de " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement uuid="f3075a9e-7660-48b2-a57d-4195504227e3" x="420" y="10" width="160" height="30"/>
+				<reportElement uuid="477d492a-c50c-4770-9204-5267f911be67" x="397" y="50" width="164" height="20"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA["F. Generación:   "+ $P{fechaGeneracion}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement uuid="cab49e17-ced0-414e-8838-1a2960a8f8fc" x="25" y="50" width="100" height="20"/>
+				<textElement>
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Tipo de Usuario:]]></text>
+			</staticText>
+			<textField>
+				<reportElement uuid="c8ab534b-b5ba-4731-b2dc-73881b65d8b8" x="127" y="50" width="129" height="20"/>
 				<textElement/>
-				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+"/"+$V{PAGE_COUNT}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{tipoUsuario}]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
 	<columnHeader>
 		<band height="32" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="530bda54-0aca-4464-a702-6f7435a107c2" x="0" y="2" width="157" height="30"/>
+				<reportElement uuid="530bda54-0aca-4464-a702-6f7435a107c2" x="0" y="2" width="144" height="30"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -69,7 +71,7 @@
 				<text><![CDATA[Usuario]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="2d5f1b4b-bf3a-40e6-8413-63426e21580b" x="157" y="2" width="280" height="30"/>
+				<reportElement uuid="2d5f1b4b-bf3a-40e6-8413-63426e21580b" x="144" y="2" width="270" height="30"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -82,7 +84,7 @@
 				<text><![CDATA[Nombre]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="1069d5f3-cdc2-4f9c-950e-1de74d6d9623" x="437" y="2" width="91" height="30"/>
+				<reportElement uuid="1069d5f3-cdc2-4f9c-950e-1de74d6d9623" x="414" y="2" width="92" height="30"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -95,7 +97,7 @@
 				<text><![CDATA[Tipo]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="f2207e9a-4870-47af-bfeb-f5ce1e4c4939" x="528" y="2" width="44" height="30"/>
+				<reportElement uuid="f2207e9a-4870-47af-bfeb-f5ce1e4c4939" x="506" y="2" width="55" height="30"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -110,9 +112,9 @@
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="17" splitType="Stretch">
+		<band height="20" splitType="Stretch">
 			<textField>
-				<reportElement uuid="2e5b58ec-11ed-4769-a89c-1db7b8553d42" x="437" y="-2" width="91" height="19"/>
+				<reportElement uuid="2e5b58ec-11ed-4769-a89c-1db7b8553d42" x="414" y="-1" width="92" height="19"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -123,7 +125,7 @@
 				<textFieldExpression><![CDATA[$F{tipo}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="2005aca6-dfaa-44ca-bb41-e909c8b78818" x="528" y="-2" width="44" height="19"/>
+				<reportElement uuid="2005aca6-dfaa-44ca-bb41-e909c8b78818" x="506" y="-1" width="55" height="19"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -133,8 +135,8 @@
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{activo}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement uuid="86df671e-2b3c-481f-81a3-19cc7bdae722" x="0" y="-2" width="157" height="19"/>
+			<textField isBlankWhenNull="true">
+				<reportElement uuid="86df671e-2b3c-481f-81a3-19cc7bdae722" x="0" y="-1" width="144" height="19"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -145,7 +147,7 @@
 				<textFieldExpression><![CDATA[$F{usuario}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="41ec8b5b-0a04-4bc0-8357-049423460f7d" x="157" y="-2" width="280" height="19"/>
+				<reportElement uuid="41ec8b5b-0a04-4bc0-8357-049423460f7d" x="144" y="-1" width="270" height="19"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -157,7 +159,15 @@
 			</textField>
 		</band>
 	</detail>
-	<pageFooter>
-		<band height="14" splitType="Stretch"/>
-	</pageFooter>
+	<summary>
+		<band height="37">
+			<textField>
+				<reportElement uuid="acdcfa32-9f0e-49ab-9f21-4cb802c38097" x="22" y="12" width="142" height="20"/>
+				<textElement>
+					<font isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Total de Usuarios: "+ $V{REPORT_COUNT}]]></textFieldExpression>
+			</textField>
+		</band>
+	</summary>
 </jasperReport>
