--- a/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/editar.xhtml
@@ -50,13 +50,13 @@
                     </p:commandButton>
                     <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
                     <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
-                        <p:menuitem value="Gestionar Docentes" >    
+                        <p:menuitem value="Portal Noticia" >    
                         </p:menuitem>
-                        <p:menuitem value="Gestionar Alumnos">    
+                        <p:menuitem value="Portal Consulta">    
                         </p:menuitem>
-                        <p:menuitem value="Gestionar Cursos">    
+                        <p:menuitem value="Buzon Notificaciones">    
                         </p:menuitem>
-                    </p:tieredMenu>           
+                    </p:tieredMenu>      
                 </div>
             </h:form>
         </p:panel>
