--- a/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/crear.xhtml
@@ -48,14 +48,15 @@
                     <p:commandButton value="Cancelar" immediate="true">
                         <p:ajax update="p1" resetValues="true" listener="#{gestionarConsultasController.setIndexMenu(0)}"/>
                     </p:commandButton>
-                    <p:splitButton value="Otras Opciones" action= "#">
-                        <p:menuitem value="Gestionar Docentes">    
+                   <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
+                    <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
+                        <p:menuitem value="Portal Noticia" >    
                         </p:menuitem>
-                        <p:menuitem value="Gestionar Alumnos">    
+                        <p:menuitem value="Portal Consulta">    
                         </p:menuitem>
-                        <p:menuitem value="Gestionar Cursos">    
+                        <p:menuitem value="Buzon Notificaciones">    
                         </p:menuitem>
-                    </p:splitButton> 
+                    </p:tieredMenu> 
                     
                                
                 </div>
