parametrizacion de reportes

--- a/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpMatriculas.jrxml
+++ b/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpMatriculas.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.1.0.final using JasperReports Library version 6.1.0  -->
-<!-- 2015-09-22T20:43:53 -->
+<!-- 2015-09-28T09:26:42 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptAlumnos" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="075ed306-8898-40c6-b065-aa7be29049d9">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="bd_sieni"/>
 	<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
@@ -8,7 +8,8 @@
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="fechaGeneracion" class="java.lang.String"/>
-	<parameter name="anio" class="java.lang.String"/>
+	<parameter name="desde" class="java.lang.String"/>
+	<parameter name="hasta" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -23,14 +24,6 @@
 	</background>
 	<title>
 		<band height="73" splitType="Stretch">
-			<textField isBlankWhenNull="true">
-				<reportElement x="60" y="50" width="70" height="20" uuid="d20cf3fb-4fec-4c38-9d51-30c924736b08"/>
-				<textFieldExpression><![CDATA[$P{anio}]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="20" y="50" width="40" height="20" uuid="f4e12c08-760c-46d5-9bb4-cc3b139a9a74"/>
-				<text><![CDATA[Año:]]></text>
-			</staticText>
 			<image>
 				<reportElement x="5" y="4" width="105" height="46" uuid="56a242b3-3fe0-495d-a1ff-15dac00741ca"/>
 				<imageExpression><![CDATA["../images/mined.jpg"]]></imageExpression>
@@ -56,6 +49,22 @@ Reporte de Alumnos]]></text>
 				<reportElement x="382" y="53" width="164" height="20" uuid="75bb6e7c-fc1a-40d3-ae69-4b44302311ec"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["F. Generación:"+ $P{fechaGeneracion}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="112" y="45" width="40" height="20" uuid="58a26b07-579f-4b93-9d06-6077ebd92902"/>
+				<text><![CDATA[Desde:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="152" y="45" width="100" height="20" uuid="8c6f13b1-69f5-4f14-bfab-759ca1cde8e5"/>
+				<textFieldExpression><![CDATA[$P{desde}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="252" y="45" width="34" height="20" uuid="38774c72-8fa3-4c97-b03c-ae2a9d8b21f7"/>
+				<text><![CDATA[Hasta:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="286" y="45" width="100" height="20" uuid="1acd74be-764d-4aaa-9e03-4c0653b925bc"/>
+				<textFieldExpression><![CDATA[$P{hasta}]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
